Enhance Product and User Entities with Additional Fields
- Added new fields to the Product entity: categoryId, brandId, mainImage, subImages, createdTime, updatedTime, and deleted, with appropriate TableField annotations for database mapping.
- Updated the User entity to replace existing createdTime and updatedTime annotations with TableField annotations for better clarity and consistency in database interactions.

These changes improve the data model for both Product and User entities, ensuring better alignment with database schema and enhancing overall data integrity.